--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       }
 
       CsvToHtmlTable.init({
-        csv_path: 'data/VIETNAM disc.csv',
+        csv_path: 'data/Vietnamd1.csv',
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
