--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
 
       
-<p>hi<a href='https://github.com/derekeder/csv-to-html-table'>Code on GitHub by Derekeder</a>.</p>
+<p>hi<a href='https://github.com/derekeder/csv-to-html-table'>Code onob GitHub by Derekeder</a>.</p>
       
       <div id='table-container'></div>
 
