--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       
 
-      <p><a href='https://github.com/derekeder/csv-to-html-table'>Code on GitHub</a>by Derekeder.</p>
+      <p><a href='https://github.com/derekeder/csv-to-html-table'>Made with code on GitHub</a>by Derekeder.</p>
 
       <div id='table-container'></div>
 
