--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer class='footer'>
       <div class='container-fluid'>
         <hr />
-        <p>hi<a href='https://github.com/derekeder/csv-to-html-table'>Code onob GitHub by Derekeder</a>.</p>
+        <p><a href='https://github.com/derekeder/csv-to-html-table'>Made with code on GitHub</a> by Derekeder.</p>
       </div>
     </footer>
 
